add resource sentry 1.0.0

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Demonstration of Resource Sentry. Simple super hero navigation tool.",
   "main": "./src/index.js",
   "scripts": {
+    "watch-resources": "rs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "private": true,
@@ -23,5 +24,13 @@
   "bugs": {
     "url": "https://github.com/resource-sentry/demo-simple-navigator/issues"
   },
-  "homepage": "https://github.com/resource-sentry/demo-simple-navigator#readme"
+  "homepage": "https://github.com/resource-sentry/demo-simple-navigator#readme",
+  "devDependencies": {
+    "@resource-sentry/core": "^1.0.1",
+    "@resource-sentry/reader-svg": "^1.0.0",
+    "@resource-sentry/writer-es2015": "^1.0.0"
+  },
+  "dependencies": {
+    "vue": "^2.5.16"
+  }
 }
