--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Demonstration of Resource Sentry. Simple super hero navigation tool.",
   "main": "./src/index.js",
   "scripts": {
-    "watch-resources": "rs",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack --colors --progress --watch --mode=development",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "watch-resources": "rs"
   },
   "private": true,
   "repository": {
@@ -28,7 +29,16 @@
   "devDependencies": {
     "@resource-sentry/core": "^1.0.1",
     "@resource-sentry/reader-svg": "^1.0.0",
-    "@resource-sentry/writer-es2015": "^1.0.0"
+    "@resource-sentry/writer-es2015": "^1.0.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-stage-0": "^6.24.1",
+    "browser-sync": "^2.24.4",
+    "browser-sync-webpack-plugin": "^2.2.2",
+    "webpack": "^4.8.3",
+    "webpack-cli": "^2.1.3"
   },
   "dependencies": {
     "vue": "^2.5.16"
