--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "babel-preset-stage-0": "^6.24.1",
     "browser-sync": "^2.24.4",
     "browser-sync-webpack-plugin": "^2.2.2",
+    "vue-loader": "^15.0.11",
+    "vue-template-compiler": "^2.5.16",
     "webpack": "^4.8.3",
     "webpack-cli": "^2.1.3"
   },
