--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   "devDependencies": {
     "@resource-sentry/core": "^1.0.1",
     "@resource-sentry/reader-svg": "^1.0.0",
-    "@resource-sentry/writer-es2015": "^1.0.0",
+    "@resource-sentry/writer-es2015": "^1.1.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
     "babel-plugin-transform-runtime": "^6.23.0",
@@ -43,6 +43,7 @@
     "webpack-cli": "^2.1.3"
   },
   "dependencies": {
-    "vue": "^2.5.16"
+    "vue": "^2.5.16",
+    "vuex": "^3.0.1"
   }
 }
