--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Demonstration of Resource Sentry. Simple super hero navigation tool.",
   "main": "./src/index.js",
   "scripts": {
-    "build-style": "node-sass ./style/main.scss ./dist/style.css",
+    "build-style": "node-sass ./style/main.scss ./dist/style.css --importer=node_modules/node-sass-tilde-importer",
     "start": "webpack --colors --progress --watch --mode=development",
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch-resources": "rs",
@@ -40,12 +40,15 @@
     "browser-sync": "^2.24.4",
     "browser-sync-webpack-plugin": "^2.2.2",
     "node-sass": "^4.9.0",
+    "node-sass-tilde-importer": "^1.0.2",
     "vue-loader": "^15.0.11",
     "vue-template-compiler": "^2.5.16",
     "webpack": "^4.8.3",
     "webpack-cli": "^2.1.3"
   },
   "dependencies": {
+    "bulma": "^0.7.1",
+    "bulmaswatch": "^0.6.2",
     "vue": "^2.5.16",
     "vuex": "^3.0.1"
   }
